@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.cryptomator</groupId>
 		<artifactId>jfuse-parent</artifactId>
-		<version>0.6.3</version>
+		<version>0.7.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>jfuse-tests</artifactId>
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
-			<version>2.0.9</version>
+			<version>2.0.12</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -81,7 +81,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>@{surefire.jacoco.args} --enable-native-access=ALL-UNNAMED --enable-preview -Djava.library.path=".:${java.library.path}"</argLine>
+					<argLine>@{surefire.jacoco.args} --enable-native-access=ALL-UNNAMED -Djava.library.path=".:${java.library.path}"</argLine>
 					<systemPropertyVariables>
 						<fuse.lib.path>${fuse.lib.path}</fuse.lib.path>
 					</systemPropertyVariables>
@@ -100,7 +100,7 @@
 							<includes>
 								<include>**/*IT.java</include>
 							</includes>
-							<argLine>@{failsafe.jacoco.args} --enable-native-access=ALL-UNNAMED --enable-preview -Djava.library.path=".:${java.library.path}"</argLine>
+							<argLine>@{failsafe.jacoco.args} --enable-native-access=ALL-UNNAMED -Djava.library.path=".:${java.library.path}"</argLine>
 							<systemPropertyVariables>
 								<fuse.lib.path>${fuse.lib.path}</fuse.lib.path>
 							</systemPropertyVariables>
